# aws-terraform-platform-tenant-bootstrap

./: .gitignore  AI.md  Makefile  README.md  pyproject.toml
.github/workflows/: terraform-hoad-org.yml  terraform-terrorgem.yml
cloudformation/member-role-stackset/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
configs/orgs/: hoad-org.tfvars  terrorgem.tfvars
docs/: architecture.md  bootstrap-runbook.md
seed-terraform/: .terraform.lock.hcl  locals.tf  main.tf  outputs.tf  providers.tf  ssm.tf  variables.tf  versions.tf
tools/: bootstrap-repo-secrets.sh  create-gh-env.sh  create_manifest.py  generate-cloudshell.sh  generate-delete.sh  setup-hoad-org-env.sh
