[project]
name = "bt-seed-terraform"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = []

[project.optional-dependencies]
dev = [
  "pre-commit>=4.5.1",
  "ruff>=0.3.5",
  "checkov>=3.2.34",
  "pip-audit>=2.7.3",
  "mypy>=1.8.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
